@@ -158,6 +158,8 @@ SOLDIERTYPE*  PickRandomPassengerFromVehicle( SOLDIERTYPE *pSoldier );
 
 BOOLEAN DoesVehicleGroupHaveAnyPassengers(const GROUP*);
 
+void SetSoldierExitHelicopterInsertionData(SOLDIERTYPE*);
+
 void HandleVehicleMovementSound(const SOLDIERTYPE*, BOOLEAN fOn);
 
 UINT8 GetVehicleArmourType(UINT8 vehicle_id);
